# senniors-backend

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
docker/src/: .bashrc  Dockerfile  post_deploy.sh
src/: .flake8  .isort.cfg  pyproject.toml  pytest.ini
src/backend/: prompt.py  urls.py  wsgi.py
src/backend/settings/: settings.py  test_settings.py
src/backend/static/css/: base.css
src/backend/storage/: overwrite_storage.py  storage_backends.py
src/backend/templates/admin/: base_site.html
src/core/: settings.py
src/core/admin/: __init__.py  appointment_admin.py  clinic_history_admin.py  user_admin.py
src/core/api/: urls.py
src/core/api/serializers/: __init__.py  appointment_serializers.py  clinic_history_serializers.py  user_serializers.py
src/core/api/serializers/tests/: test_appointment_serializers.py  test_clinic_history_serializers.py  test_user_serializers.py
src/core/api/tests/: __init__.py  base.py
src/core/api/views/: __init__.py  appointment_views.py  user_views.py
src/core/api/views/tests/: test_appointment_views.py  test_user_views.py
src/core/factories/: __init__.py  appointment_factories.py  clinic_history_factories.py  user_factories.py
src/core/helpers/: data_client.py
src/core/helpers/tests_helpers/: test_data_client.py
src/core/migrations/: 0001_initial.py  0002_clinichistory_active_alter_appointment_scheduled.py
src/core/models/: __init__.py  abstract.py  appointment.py  clinic_history.py  user.py
src/core/models/tests/: test_appointment.py
src/locale/es/LC_MESSAGES/: django.mo  django.po
